themes/snapshot/tags/1.2.9/README.md
License
-----------------------------------------------

Snapshot WordPress Theme, Copyright 2011 SiteOrigin
Snapshot is distributed under the terms of the GNU GPL v2.0. See license.txt

This theme includes the following external libraries and resources
* HTML5 Shiv MIT/GPL2 Licensed 
* jQuery Image Preload Dimas Begunoff licensed under MIT
* Fitvids Released under the WTFPL license
* Demo images under public domain from Pixabay

Change Log
-----------------------------------------------

#### 1.0
* Initial Release

#### 1.0.1
* Bug fixes and minor updates

#### 1.0.2
* Set up sprites and added spritemaps to premium

#### 1.0.4
* Fixed various issues

#### 1.0.5
* Fixed title display
* Added custom menu walkers
* Added more attribute escaping
* Fixed IE issues

#### 1.0.8
* Added demo slider
* Moved style.css to an enqueue function
* Added selectivizr

#### 1.0.9
* Fixed theme endpoint and version number

#### 1.0.10
* Fixed search text setting
* Added filter for home page slider categories

#### 1.1
* Updated to the latest framework.

#### 1.2
* Updated to latest framework.
* Added blog page archive.
* Various fixes and security enhancements.
* Integrated support for page builder.
* Improved home page slider, allowing dynamic height.
* Added custom gallery type of "slider".
* Integrated FitVids
* CSS fixes

#### 1.2.1
* Fixed bug with media browser and home page builder.

#### 1.2.2
* Fixed conflict with page builder plugin.

#### 1.2.3
* Updated to the latest version of SiteOrigin framework
* Various fixes for WordPress 3.6 compatibility

#### 1.2.4
* Added updater for latest version of Page Builder

#### 1.2.5
* Activating Page Builder no longer causes error.

#### 1.2.6
* Changed purchase information.
* Fixed translation.
* Fixed blog archive page template.

#### 1.2.7
* Updates to premium update page.

#### 1.2.8
* Updated to latest version of SiteOrigin framework.
* Added bold and italic content styling.
* Premium: Fixed video quality args.

#### 1.2.9
* Updated to latest version of SiteOrigin framework.
* Improved bundled translation files.